fixed side scrolling bar on small screens

--- a/assets/css/cam.css
+++ b/assets/css/cam.css
@@ -49,7 +49,13 @@ body {
     height:50%;
     margin-left:8%;
 }
-
+@media screen and (max-width: 1100px){
+    body{
+        width: 96%;
+        margin-left: 2%;
+        margin-right:2%;
+    }
+}
 
 
 @media screen and (max-width: 991px) {
@@ -57,9 +63,14 @@ body {
         /* position: fixed; */
         /* justify-self: right; */
        margin-left: 50%;
+
     }
     #navbar{
         text-align: right;
+    }
+    body{
+        width: 96%;
+        align-items: center;
     }
     
 }
@@ -102,7 +113,11 @@ body {
     #navToggle {
      margin-left:13% ;
     }
-
+    body{
+        width:94%;
+        /* margin-left:4% ; */
+        padding-left: 3%;
+    }
 }
 @media screen and (max-width: 450px) {
     #navBtn {
